Fix the size of the steam widget on mobile

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -235,7 +235,8 @@ article.socials {
 }
 
 #links .steam-widget {
-  width: 646px;
+  width: 500px;
+  max-width: 100%;
   height: 190px;
   margin-bottom: 40px;
 }
